# yew-app

./: Cargo.toml  index.html  index.scss
.cargo/: config.toml
.github/workflows/: main.yml
src/: main.rs
src/components/: link_list.rs
src/models/: link.rs
src/pages/: home.rs  mod.rs  usefull_links.rs
