[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

gloo-net = "0.4.0"
gloo-console = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"